# charmonium.cache

./: .bumpversion.cfg  .coveragerc  .gitignore  .pylintrc  .python-version  .r-mount  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  README.rst  TODO.md  cookiecutter_replay.json  cookiecutter_selection.json  flake.nix  mypy.ini  pylintrc  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.sh  script.py  script2.py  setup.py  shell.nix  tox.ini
.github/workflows/: main.yaml
benchmark/: .dockerignore  .envrc  .gitignore  Dockerfile  README.rst  TODO.md  ascl_output  cookiecutter_replay.json  flake.nix  flapy.md  pandas_benchmark.py  possible_repos.md  proselint.json  pylintrc  pyproject.toml  python_poetry.env  repos.csv  script.py  test_example.py  test_testmon.py  that_conftest.py  trace.py  trace_imports.py
benchmark/benchmark/: .#test_cmd.py  add_memoization.py  annotate_funcs.py  data2.py  data3.py  environment.py  get_repos.py  html.py  html_helpers.py  ipynb_to_script.py  main.py  my_coverage.py  pandas_storage.py  ratelimit_check.py  repo.py  run_experiment.py  slice_repo.py  test.py  test_cmd.py  util.py  write_summary.py
benchmark/data/: bollywood_report.html  report_exoplanet_rr.html  report_pudl.html  report_rr_theano_file_io.html  report_simple_determinism.html
benchmark/data/1/: overheads.csv  results.csv
benchmark/data/2/: overheads.csv  results.csv
benchmark/resources/PyDSH/: requirements.txt
benchmark/resources/TRINA/: environment.yaml
benchmark/resources/astropy/: UVES.py  environment.yml  examples.py  notes.txt
benchmark/resources/bollywood-data-science/: code_patch  packages_patch  patch
benchmark/resources/eht-imaging/: environment.yml  example.py
benchmark/resources/emcee/: line.ipynb  script.py
benchmark/resources/exoplanet/: environment.yaml  environment3.yaml  script.py  script2.py  script_theano.py
benchmark/resources/lightkurve/: Pipfile  environment.yaml  possible_tests.txt  pyproject.toml
benchmark/resources/pudl/: .gitignore  Pipfile  callgraph.dot  log  pudl_profile.txt  read_excel.py  stats
benchmark/resources/pySYD/: Pipfile  cache_opportunities.txt
benchmark/test_cache/: __main__.py  action.py  add_memoization.py  annotate_funcs.py  data.py  data2.py  environment.py  html.py  html_helpers.py  ipynb_to_script.py  main.py  repo.py  run_experiment.py  test_cache.py  util.py  write_summary.py
cache/: __init__.py  __main__.py  cache.py  requirements  types.py  util.py
cache/tests/: test_cache.py
charmonium/cache/: __init__.py  __main__.py  _cli.py  cache.py  cli.py  core.py  determ_hash.py  func_version.py  helpers.py  index.py  lookup_check.py  memoize.py  obj_store.py  pathlike.py  persistent_hash.py  pickler.py  policies.py  readers_writer_lock.py  replacement_policies.py  rw_lock.py  test_obj_store.py  types.py  util.py
charmonium/cache/tests/: test_cache.py
docs/: .buildinfo  api_reference.html  api_reference.rst  authors.html  authors.rst  changelog.html  cli.html  cli.rst  conf.py  contributing.rst  contributors_guide.html  faq.html  features.html  features.rst  genindex.html  history.html  how_it_works.html  index.html  index.rst  modules.rst  objects.inv  plans.md  py-modindex.html  search.html  searchindex.js  theory.rst  tutorial.html  tutorial.rst  works_cited.html
docs/.doctrees/: api_reference.doctree  authors.doctree  changelog.doctree  cli.doctree  contributors_guide.doctree  environment.pickle  faq.doctree  features.doctree  history.doctree  how_it_works.doctree  index.doctree  tutorial.doctree  works_cited.doctree
docs/_build/: api_reference.html  authors.html  cache.html  cli.html  contributing.html  features.html  genindex.html  index.html  installation.html  modules.html  objects.inv  prior_work.html  py-modindex.html  searchindex.js  theory.html  works_cited.html
docs/_build/.doctrees/: api_reference.doctree  authors.doctree  cache.doctree  charmonium.cache.charmonium.cache.doctree  charmonium.cache.charmonium.doctree  charmonium.cache.docs.doctree  charmonium.cache.doctree  charmonium.cache.tests.doctree  cli.doctree  contributing.doctree  contributors_guide.doctree  credits.doctree  environment.pickle  features.doctree  index.doctree  installation.doctree  modules.doctree  prior_work.doctree  theory.doctree  tutorial.doctree  works_cited.doctree
docs/_build/.doctrees/autoapi/: index.doctree
docs/_build/.doctrees/autoapi/cache/: index.doctree
docs/_build/_sources/: authors.rst.txt  cache.rst.txt  cli.rst.txt  contributing.rst.txt  contributors_guide.rst.txt  installation.rst.txt  prior_work.rst.txt  works_cited.rst.txt
docs/_build/_sources/autoapi/: index.rst.txt
docs/_build/_sources/autoapi/cache/: index.rst.txt
docs/_build/autoapi/: index.html
docs/_build/autoapi/cache/: index.html
docs/_build/autoapi/cache/core/: index.html
docs/_build/autoapi/cache/func_version/: index.html
docs/_build/autoapi/cache/index/: index.html
docs/_build/autoapi/cache/obj_store/: index.html
docs/_build/autoapi/cache/policies/: index.html
docs/_build/autoapi/cache/readers_writer_lock/: index.html
docs/_build/autoapi/cache/util/: index.html
docs/_sources/: api_reference.rst.txt  changelog.rst.txt  faq.rst.txt  history.rst.txt  how_it_works.rst.txt  index.rst.txt  tutorial.rst.txt
docs/_static/: documentation_options.js
docsrc/: api_reference.rst  conf.py  faq.rst  features.rst  history.rst  how_it_works.rst  index.rst  tutorial.rst  works_cited.rst
report/: bib.json  flake.nix  freeze.md  main.md  reflection.md  result
report/resources/: acm.csl
scripts/: docs.sh  publish.sh  test.sh
tests/: test_cache.py  test_code_change.py  test_determ_hash.py  test_example.py  test_helpers.py  test_index.py  test_memoize.py  test_memoize_parallel.py  test_method_decorator.py  test_obj_store.py  test_persistent_hash.py  test_picklers.py  test_timed_block.py  test_util.py  test_utils.py
tmp2/: script
typings/: bitmath.pyi  cloudpickle.pyi  dill.pyi  fasteners.pyi  pytest.pyi
typings/bitmath/: __init__.pyi
typings/scipy/: special.pyi
(+14 files in other folders)
