[tool.poetry]
name = "test_cache"
version = "0.1.0"
description = ""
authors = ["Samuel Grayson <grayson5@illinois.edu>"]
license = "NCSA"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
# make sure to keep the Python versions here consistent with those tested by Tox (tool.tox.legacy_tox_ini.tox.envlist).
typer = "^0.4.0"
"charmonium.async-subprocess" = "^0.1.7"
tqdm = "^4.62.3"
pandas = "^1.3.4"
"charmonium.cache" = {path = "../"}
beniget = "^0.4.1"
psutil = "^5.9.0"
toml = "^0.10.2"
"charmonium.time-block" = "^0.3.0"
numpy = "^1.22.2"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
BenchExec = "^3.11"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
typer = "^0.4.0"
coverage = "^6.1.1"
"charmonium.async-subprocess" = "^0.1.7"
typing-extensions = "^3.10.0"
sphinx-autodoc-typehints = "^1.12.0"
pandas = "^1.4.1"
types-toml = "^0.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# [tool.pylint]
# Too long for inclusion here
# see pylintrc

# [tool.mypy]
# Too long for inclusion here
# see mypy.ini

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{37,38,39}
# Make sure to install the Python versions listed here in the Nix flake.
isolated_build = True

[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install
    poetry run pytest --quiet
"""
