[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = "Benchmark charmonium.cache"
authors = ["Samuel Grayson <sam+dev@samgrayson.me>"]
license = "MIT"
readme = "README.rst"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--quiet --numprocesses=auto --doctest-modules --doctest-glob='*.rst'"

[tool.coverage.run]
branch = true
data_file = "build/.coverage"

[tool.coverage.html]
directory = "build/htmlcov"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self\.debug',
    'raise AssertionError',
    'raise NotImplementedError',
    'if False:',
    'if __name__ == .__main__.:',
	'if TYPE_CHECKING',
    '@(abc\.)?abstractmethod',
    '\w*\.\.\.$',
    '\w*pass$',
]

# [tool.pylint]
# Too long for inclusion here
# see pylintrc

[tool.mypy]
strict = true
pretty = true
error_summary = true
color_output = true
#mypy_path = stubs

[tool.bump2version]
current_version = "0.1.0"
commit = true
tag = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
# Make sure to install the Python versions listed here in the Nix flake.
isolated_build = True

[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install
    {toxinidir}/script.py per-env-tests
"""

[tool.poetry.dev-dependencies]
autoimport = "^0.7.5"
isort = "^5.10.0"
black = "^21.10b0"
pylint = "^2.11.1"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-xdist = "^2.4.0"
pytest-cov = "^3.0.0"
coverage = "^6.1.2"
tox = "^3.24.4"
radon = "^5.1.0"
twine = "^3.5.0"
proselint = "^0.13.0"
rstcheck = "^3.3.1"
bump2version = "^1.0.1"
"charmonium.async-subprocess" = "^0.1.7"
typer = "^0.4.0"
termcolor = "^1.1.0"
typing-extensions = "^4.1.1"
ipython = "^8.10.0"
ipdb = "^0.13.9"
types-setuptools = "^57.4.10"
types-toml = "^0.10.4"
types-termcolor = "^1.1.3"
# rest
ascl-net-scraper = "^0.3.5"
tqdm-stubs = "^0.2.0"
PyGithub = "^1.55"
rich = "^12.0.0"
pytest-testmon = "^1.3.1"
types-requests = "^2.27.16"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
# make sure to keep the Python versions here consistent with those tested by Tox (tool.tox.legacy_tox_ini.tox.envlist).
typer = "^0.4.0"
"charmonium.async-subprocess" = "^0.1.7"
tqdm = "^4.62.3"
pandas = "^1.3.4"
"charmonium.cache" = {path = "../"}
beniget = "^0.4.1"
psutil = "^5.9.0"
toml = "^0.10.2"
"charmonium.time-block" = "^0.3.0"
numpy = "^1.22.2"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
BenchExec = "^3.11"
bitmath = "^1.3.3"
